<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Note Managerment System</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Category</string>
    <string name="menu_slideshow">Priority </string>
    <string name="menu_status">Status</string>
    <string name="menu_note">Note </string>



    <string name="menu_editprofile">Edit Profile </string>
    <string name="menu_changepassword">Change PassWord </string>
    <string name="detail">kylh84@gmail.com</string>
    <string name="app_name">Note Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>