<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.note_managerment.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.note_managerment.ui.category.CategoryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.note_managerment.ui.priority.PriorityFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_status"
        android:name="com.example.note_managerment.ui.status.StatusFragment"
        android:label="@string/menu_status"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@+id/nav_note"
        android:name="com.example.note_managerment.ui.note.NoteFragment"
        android:label="@string/menu_note"
        tools:layout="@layout/fragment_note" />
    <fragment
        android:id="@+id/nav_editprofile"
        android:name="com.example.note_managerment.ui.editprofile.EditProfileFragment"
        android:label="@string/menu_editprofile"
        tools:layout="@layout/fragment_editprofile" />
    <fragment
        android:id="@+id/nav_changepassword"
        android:name="com.example.note_managerment.ui.changepassword.ChangePasswordFragment"
        android:label="@string/menu_changepassword"
        tools:layout="@layout/fragment_changepassword" />




</navigation>